import React from 'react';
import { mount } from 'enzyme';
import { ThemeProvider } from 'styled-components';
import { theme } from 'mcs-lite-theme';
import DataChannelAdapter from '../DataChannelAdapter';

describe('DataChannelAdapter', () => {
  it('should render STRING_DISPLAY correctly with default value to empty', () => {
    const wrapper = mount(
      <ThemeProvider theme={theme}>
        <DataChannelAdapter
          dataChannelProps={{
            id: 'id',
            type: 'STRING_DISPLAY',
            values: {},
            format: {},
          }}
          eventHandler={() => {}}
        />
      </ThemeProvider>,
    );

    expect(wrapper.find(DataChannelAdapter)).toMatchSnapshot();
  });

  it('should render STRING_DISPLAY correctly with value', () => {
    const wrapper = mount(
      <ThemeProvider theme={theme}>
        <DataChannelAdapter
          dataChannelProps={{
            id: 'id',
            type: 'STRING_DISPLAY',
            values: { value: 'michaelhsu' },
            format: {},
          }}
          eventHandler={() => {}}
        />
      </ThemeProvider>,
    );

    expect(wrapper.find(DataChannelAdapter)).toMatchSnapshot();
  });

  it('should render STRING_DISPLAY correctly with empty string', () => {
    const wrapper = mount(
      <ThemeProvider theme={theme}>
        <DataChannelAdapter
          dataChannelProps={{
            id: 'id',
            type: 'STRING_DISPLAY',
            values: { value: '' },
            format: {},
          }}
          eventHandler={() => {}}
        />
      </ThemeProvider>,
    );

    expect(wrapper.find(DataChannelAdapter)).toMatchSnapshot();
  });
});
