// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render STRING_DISPLAY correctly with default value to empty 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "STRING_DISPLAY",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <DisplayString
    placeholder="String only"
    value=""
  >
    <DisplayString__Container>
      <div
        className="DisplayString__Container-gMiSmM eaLFWz"
      >
        <DisplayString__StyledTextarea
          disabled={true}
          placeholder="String only"
          value=""
        >
          <Textarea
            className="DisplayString__StyledTextarea-iHUBEj eYiCLJ"
            disabled={true}
            kind="primary"
            placeholder="String only"
            value=""
          >
            <textarea
              className="DisplayString__StyledTextarea-iHUBEj eYiCLJ Textarea__Textarea-dEcNVt haEdAh"
              disabled={true}
              kind="primary"
              placeholder="String only"
              value=""
            />
          </Textarea>
        </DisplayString__StyledTextarea>
      </div>
    </DisplayString__Container>
  </DisplayString>
</DataChannelAdapter>
`;

exports[`should render STRING_DISPLAY correctly with empty string 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "STRING_DISPLAY",
      "values": Object {
        "value": "",
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayString
    placeholder="String only"
    value=""
  >
    <DisplayString__Container>
      <div
        className="DisplayString__Container-gMiSmM eaLFWz"
      >
        <DisplayString__StyledTextarea
          disabled={true}
          placeholder="String only"
          value=""
        >
          <Textarea
            className="DisplayString__StyledTextarea-iHUBEj eYiCLJ"
            disabled={true}
            kind="primary"
            placeholder="String only"
            value=""
          >
            <textarea
              className="DisplayString__StyledTextarea-iHUBEj eYiCLJ Textarea__Textarea-dEcNVt haEdAh"
              disabled={true}
              kind="primary"
              placeholder="String only"
              value=""
            />
          </Textarea>
        </DisplayString__StyledTextarea>
      </div>
    </DisplayString__Container>
  </DisplayString>
</DataChannelAdapter>
`;

exports[`should render STRING_DISPLAY correctly with value 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "STRING_DISPLAY",
      "values": Object {
        "value": "michaelhsu",
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayString
    placeholder="String only"
    value="michaelhsu"
  >
    <DisplayString__Container>
      <div
        className="DisplayString__Container-gMiSmM eaLFWz"
      >
        <DisplayString__StyledTextarea
          disabled={true}
          placeholder="String only"
          value="michaelhsu"
        >
          <Textarea
            className="DisplayString__StyledTextarea-iHUBEj eYiCLJ"
            disabled={true}
            kind="primary"
            placeholder="String only"
            value="michaelhsu"
          >
            <textarea
              className="DisplayString__StyledTextarea-iHUBEj eYiCLJ Textarea__Textarea-dEcNVt haEdAh"
              disabled={true}
              kind="primary"
              placeholder="String only"
              value="michaelhsu"
            />
          </Textarea>
        </DisplayString__StyledTextarea>
      </div>
    </DisplayString__Container>
  </DisplayString>
</DataChannelAdapter>
`;
